force-app/main/default/objects/ShippingCharge__mdt/ShippingCharge__mdt.object-meta.xml
<CustomObject>
    <description>Holds the shipping charges definition</description>
    <label>Shipping Charge</label>
    <pluralLabel>Shipping Charges</pluralLabel>
</CustomObject>