force-app/main/default/objects/ShippingCharge__mdt/fields/AdditionalDescription__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDescription__c</fullName>
    <label>Additional Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>