force-app/main/default/objects/ShippingCharge__mdt/fields/AdditionalTitle__c.field-meta.xml
<CustomField>
    <fullName>AdditionalTitle__c</fullName>
    <label>Additional Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>