force-app/main/default/objects/ShippingCharge__mdt/fields/LabelToShow__c.field-meta.xml
<CustomField>
    <fullName>LabelToShow__c</fullName>
    <label>Label to show</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>