force-app/main/default/objects/ShippingCharge__mdt/fields/ShippingChargeValue__c.field-meta.xml
<CustomField>
    <fullName>ShippingChargeValue__c</fullName>
    <label>Shipping Charge Value</label>
    <precision>8</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>