force-app/main/default/objects/ShippingCharge__mdt/fields/ShippingType__c.field-meta.xml
<CustomField>
    <fullName>ShippingType__c</fullName>
    <label>Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent Calculation</fullName>
                <default>true</default>
                <label>Percent Calculation</label>
            </value>
            <value>
                <fullName>Additional Option</fullName>
            </value>
            <value>
                <fullName>Amount to Free Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>