force-app/main/default/objects/ShippingCharge__mdt/listViews/ShowAllFields.listView-meta.xml
<ListView>
    <fullName>ShowAllFields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>isActive__c</columns>
    <columns>ShippingType__c</columns>
    <columns>AdditionalDescription__c</columns>
    <columns>AdditionalTitle__c</columns>
    <columns>ShippingChargeValue__c</columns>
    <columns>LabelToShow__c</columns>
    <filterScope>Everything</filterScope>
    <label>Show All Fields</label>
</ListView>